--- a/webapp/knockthon-A.R.M.A.N/www/Support/img/home.html
+++ b/webapp/knockthon-A.R.M.A.N/www/Support/img/home.html
@@ -1,4 +1,3 @@
-
   	<div class="content-wrap">
      <header class="hero-area" id="home">      
         <div class="container">
@@ -6,9 +5,7 @@
               <div class="navbar navbar-inverse sticky-navigation navbar-fixed-top" role="navigation" data-spy="affix" data-offset-top="200">
                 <div class="container">
                   <div class="navbar-header">
-                    <span class="logo-left " href="#">
-                      <i class="mdi-image-timelapse"></i>A.R.M.A.N.
-                      </span>
+                    <a class="logo-left " href="#"><i class="mdi-image-timelapse"></i>A.R.M.A.N.</a>
                   </div>
                   <!--<div class="navbar-right">
                     <button class="menu-icon" id="open-button">
@@ -92,7 +89,7 @@ New tasks start every other Thursday. Want in on the action? Get ready to take c
         <div class="row">     
 
           <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <img src="assets/img/default.JPG" alt="">
+            <img src="assets/img/home_image.png" alt="">
           </div>
 
           <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
